test/files/neg/names-defaults-neg-warn.check
names-defaults-neg-warn.scala:25: error: unknown parameter name: x
Note that assignments in argument position are no longer allowed since Scala 2.13.
To express the assignment expression, wrap it in brackets, e.g., `{ x = ... }`.
    f2(x = 1) // 2.12: deprecation warning, compiles. 2.13: error, no parameter named x
         ^
names-defaults-neg-warn.scala:36: error: unknown parameter name: x
Note that assignments in argument position are no longer allowed since Scala 2.13.
To express the assignment expression, wrap it in brackets, e.g., `{ x = ... }`.
    synchronized(x = 1) // deprecation warning in 2.12, error in 2.13
                   ^
names-defaults-neg-warn.scala:45: error: unknown parameter name: x
    f2(x = 1) // 2.12, 2.13: error (no such parameter). no deprecation warning in 2.12, x is not a variable.
         ^
names-defaults-neg-warn.scala:13: warning: the parameter name s is deprecated: use x instead
  deprNam2.f(s = "dlfkj")
               ^
names-defaults-neg-warn.scala:14: warning: the parameter name x is deprecated: use s instead
  deprNam2.g(x = "dlkjf")
               ^
2 warnings
3 errors
